--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "fastapi>=0.116.1",
     "gunicorn>=23.0.0",
     "ollama>=0.5.3",
+    "pipreqs>=0.5.0",
     "python-dotenv>=1.1.1",
     "requests>=2.32.5",
     "uvicorn>=0.35.0",
